; ModuleID = '/home/carl/AnghaBench/redis/tests/modules/extr_propagate.c_threadMain.c'
source_filename = "/home/carl/AnghaBench/redis/tests/modules/extr_propagate.c_threadMain.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [5 x i8] c"INCR\00", align 1
@.str.1 = private unnamed_addr constant [2 x i8] c"c\00", align 1
@.str.2 = private unnamed_addr constant [7 x i8] c"thread\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @threadMain(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %5 = load i8*, i8** %2, align 8
  %6 = call i32 @REDISMODULE_NOT_USED(i8* %5)
  %7 = call i32* @RedisModule_GetThreadSafeContext(i32* null)
  store i32* %7, i32** %3, align 8
  %8 = load i32*, i32** %3, align 8
  %9 = call i32 @RedisModule_SelectDb(i32* %8, i32 9)
  store i32 0, i32* %4, align 4
  br label %10

10:                                               ; preds = %20, %1
  %11 = load i32, i32* %4, align 4
  %12 = icmp slt i32 %11, 10
  br i1 %12, label %13, label %23

13:                                               ; preds = %10
  %14 = load i32*, i32** %3, align 8
  %15 = call i32 @RedisModule_ThreadSafeContextLock(i32* %14)
  %16 = load i32*, i32** %3, align 8
  %17 = call i32 @RedisModule_Replicate(i32* %16, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.2, i64 0, i64 0))
  %18 = load i32*, i32** %3, align 8
  %19 = call i32 @RedisModule_ThreadSafeContextUnlock(i32* %18)
  br label %20

20:                                               ; preds = %13
  %21 = load i32, i32* %4, align 4
  %22 = add nsw i32 %21, 1
  store i32 %22, i32* %4, align 4
  br label %10

23:                                               ; preds = %10
  %24 = load i32*, i32** %3, align 8
  %25 = call i32 @RedisModule_FreeThreadSafeContext(i32* %24)
  ret i8* null
}

declare dso_local i32 @REDISMODULE_NOT_USED(i8*) #1

declare dso_local i32* @RedisModule_GetThreadSafeContext(i32*) #1

declare dso_local i32 @RedisModule_SelectDb(i32*, i32) #1

declare dso_local i32 @RedisModule_ThreadSafeContextLock(i32*) #1

declare dso_local i32 @RedisModule_Replicate(i32*, i8*, i8*, i8*) #1

declare dso_local i32 @RedisModule_ThreadSafeContextUnlock(i32*) #1

declare dso_local i32 @RedisModule_FreeThreadSafeContext(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
